oxiplate-derive/tests/broken/char/eof-instead-of-quote.stderr
error: Expected `'`.
 --> tests/broken/char/eof-instead-of-quote.rs:4:25
  |
4 | #[oxiplate_inline(r"{{ 'h")]
  |                         ^
